[BuildSystem] Fix BuildValue initialization & serialization.

- The initializer was allowing uninitialized data in the commandSignature for
   sentinel values (like virtual inputs).

 - The move initialization was failing to initialize some fields (!).

 - The serialization was also failing to properly normalize values, so the
   serialized value was not properly deterministic.

(cherry picked from commit 346849f81f2aaa458d68fd57e4a3cbf94e2db503)

https://bugs.swift.org/browse/SR-4123